css/primary.scss
// Imports
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Open+Sans:wght@400;600&display=swap');
// - Bootstrap
$breakpoint-xs: 0;
$breakpoint-sm: 576px;
$breakpoint-md: 768px;
$breakpoint-lg: 992px;
$breakpoint-xl: 1200px;
$breakpoint-xxl: 1400px;

// Definitions
$leading-spacing: 3rem;
$leading-spacing-md: 100px;

// Text
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Merriweather', serif;
    font-weight: 900;
}

h1 {
    font-size: 2.5rem;

    @media (min-width: $breakpoint-sm) {
        font-size: 3.2rem;
    }
}

h2 {
    font-size: 2.2rem;

    @media (min-width: $breakpoint-sm) {
        font-size: 2.8rem;
    }
}

p,
a,
span,
li,
input,
textarea {
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;

    strong {
        font-weight: 600;
    }
}

a {
    text-decoration: none;
}

// Color
.dark-bg {
    background-color: #000;
    color: #fff;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        color: #fff;
    }

    p {
        color: #C5C9CB;

        strong {
            color: #fff;
        }
    }
}

.light-bg {
    background-color: #F0F0F0;
    color: #000;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        color: #000;
    }

    p {
        color: #434343;

        strong {
            color: #000;
        }
    }
}

.white-bg {
    background-color: #f6f6f8;
    color: #000;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        color: #000;
    }

    p {
        color: #434343;

        strong {
            color: #000;
        }
    }
}

// Layout
h1 {
    margin-bottom: 1rem;
}

.container-fluid {
    margin: 0;
}

// Concrete Elements
body {
    background-color: #F0F0F0;
}

.hero-section {
    min-height: 80vh;
    overflow: hidden;

    padding-top: 4rem;
    padding-bottom: 3rem;

    @media (min-width: $breakpoint-md) {
        padding-top: 0;
        padding-bottom: 0;
    }

    [class^="col"] {
        @media (min-width: $breakpoint-md) {
            padding-left: $leading-spacing-md;
            padding-right: $leading-spacing-md;
        }

        &.hero-title {
            @media (min-width: $breakpoint-md) {
                padding-right: 2rem;
            }
        }
    }

    .logo {
        height: 2rem;
        margin-bottom: 2rem;
        max-width: 60vw;
        max-width: 100%;
        object-fit: contain;
    }

    .device {
        // transform: scale(0) translateY(-20%);

        // @media (min-width: $breakpoint-sm) {
        //     transform: scale(0.6) translateY(-50%);
        // }
        transform: scale(0.8);

        @media (min-width: $breakpoint-md) {
            transform: scale(0.8)
        }

        @media (min-width: $breakpoint-lg) {
            transform: scale(1.1) translateY(-20%);
        }
    }

    .app-store-badge {
        margin-top: 2rem;

        p {
            margin-bottom: 0;
        }

        a {
            margin-right: 1rem;

            img {
                height: 3rem;
            }
        }

        .download-qr {
            height: 0;
            width: 0;
            image-rendering: crisp-edges;
        }

        .grow {
            height: auto;
            width: 60px;
            // border-radius: 8px;
            // padding: 5px;
            // background-color: #ffffff;
        }
    }
}

.regular-section {
    // height: 90vh;

    padding-top: 6rem;
    padding-bottom: 6rem;

    .title {
        margin-bottom: 2rem;

        &.text-center {
            padding-left: 0;
        }
    }
}

.features-section {
    .col-12 {
        padding-left: 0;
        padding-right: 0;
        overflow: auto;
    }

    .scrolling-wrapper {
        overflow-x: auto;

        /* Hide scrollbar for Chrome, Safari and Opera */
        &::-webkit-scrollbar {
            display: none;
        }

        /* Hide scrollbar for IE, Edge and Firefox */
        -ms-overflow-style: none;
        /* IE and Edge */
        scrollbar-width: none;
        /* Firefox */
    }

    .title {
        margin-left: 1rem;

        @media (min-width: $breakpoint-md) {
            margin-left: $leading-spacing-md;
        }
    }

    .previews {
        overflow: visible;

        .col {
            padding-right: 0;
            padding-left: 0;
            margin-right: 0.3rem;

            &:first-child {
                margin-left: 1rem;

                @media (min-width: $breakpoint-md) {
                    margin-left: $leading-spacing-md;
                }
            }

            // Other than first
            &:not(:first-child) {
                margin-left: 0;
            }

            &:last-child {
                margin-right: $leading-spacing;
                padding-right: calc($leading-spacing-md / 2);

                @media (min-width: $breakpoint-md) {
                    margin-right: $leading-spacing-md;
                    padding-right: calc($leading-spacing-md / 2);
                }
            }

            img {
                border-radius: 2rem;
                height: 40rem;
                // width: 100%;
            }
        }
    }
}

.server-section {
    .server-image {
        img {
            max-width: 100%;
            max-height: 70vh;
            // Content mode fit
            object-fit: contain;
        }
    }

    .access-from {
        * {
            display: inline;
            margin-right: 0.3rem;
            margin-left: 0.3rem;

            @media (min-width: $breakpoint-md) {
                margin-right: 0.5rem;
                margin-left: 0.5rem;
            }
        }
    }
}

.privacy-section {
    min-height: 80vh;

    h2 {
        img {
            height: 2.2rem;
            margin-left: 1rem;

            @media (min-width: $breakpoint-md) {
                height: 3rem;
            }

        }
    }
}


.closing-section {
    .app-store-badge {
        img {
            height: 3rem;
            margin-bottom: 2rem;
        }
    }

    img.download-qr {
        height: 0;
        width: 0;
        image-rendering: crisp-edges;
    }

    img.grow {
        height: auto;
        width: 60px;
    }
}

// Not on bootstrap, but I need it
.w {
    &-md {
        &-25 {
            @media (min-width: $breakpoint-md) {
                width: 25% !important;
            }
        }

        &-50 {
            @media (min-width: $breakpoint-md) {
                width: 50% !important;
            }
        }

        &-75 {
            @media (min-width: $breakpoint-md) {
                width: 75% !important;
            }
        }

        &-100 {
            @media (min-width: $breakpoint-md) {
                width: 100% !important;
            }
        }
    }
}

// Growing stuff
.growing-container {}

.growing-element {
    transition: all .3s ease-in-out;
}

.grow {
    transform: scale(3);
}

.reveal {
    &-fade-in {
        position: relative;
        transform: translateY(30px);
        opacity: 0;
        transition: 1s all ease;

        &.active {
            transform: translateY(0);
            opacity: 1;
        }
    }

    &-scale {
        position: relative;
        transform: scale(0.95);
        opacity: 1;
        transition: 1s all ease;

        &.active {
            transform: scale(1);
            opacity: 1;
        }
    }

    &-auto {
        &-opacity {
            position: relative;
            opacity: 0.4;
            transition: 3s all ease-in-out;
    
            &.active {
                opacity: 1;
            }
        }

        &-slide-down {
            position: relative;
            transform: translateY(-10px);
            opacity: 0;
            transition: 1s all ease-in-out;

            &-1 {
                @extend .reveal-auto-slide-down;
                transition-delay: 0.6s;
            }

            &-2 {
                @extend .reveal-auto-slide-down;
                transition-delay: 0.9s;
            }

            &-3 {
                @extend .reveal-auto-slide-down;
                transition-delay: 0.9s;
            }

            &-4 {
                @extend .reveal-auto-slide-down;
                transition-delay: 1.2s;
            }
    
            &.active {
                transform: translateY(0);
                opacity: 1;
            }
        }

    }
}

